# common-native

./: .gitignore  .travis.yml  LICENSE  README.md  bitbucket-pipelines.yml  pom.xml
src/main/c++/: NativeMovable.hpp  NativeMovableComponent.hpp
src/main/java/: NativeVersion.java  module-info.java
src/main/java/be/yildiz/common/nativeresources/: Native.java  NativeOperatingSystem.java  NativePointer.java  NativeResourceLoader.java  SystemLinux64.java  SystemWin32.java  SystemWin64.java  Systems.java  package-info.java
src/main/java/be/yildizgames/common/nativeresources/: Artifact.java  Native.java  NativeOperatingSystem.java  NativePointer.java  NativeResourceLoader.java  NativeUtil.java  OperatingSystem.java  OperatingSystems.java  SystemLinux64.java  SystemWin64.java  Systems.java  package-info.java
src/main/java/be/yildizgames/common/nativeresources/systems/: SystemLinux64.java  SystemWin64.java
src/main/scripts/linux64/: CMakeLists.txt
src/main/scripts/win32/: CMakeLists.txt  build_yildiz-common-native.sh
src/resources/include/: NativeMovable.hpp  NativeMovableComponent.hpp
src/test/java/be/yildiz/common/nativeresources/: NativePointerTest.java  NativeResourceLoaderTest.java  SystemLinux64Test.java  SystemWin32Test.java  SystemWin64Test.java  SystemsTest.java
src/test/java/be/yildizgames/common/nativeresources/: NativePointerTest.java  NativeResourceLoaderTest.java  NativeUtilTest.java  OperatingSystemTest.java  OperatingSystemsTest.java  SystemLinux64Test.java  SystemWin64Test.java  SystemsTest.java
